Organiza projeto e remove vulnerabilidades